# location_location_cangjie_wrapper

./: BUILD.gn  README.md  README_zh.md  bundle.json
kit/LocationKit/: BUILD.gn  index.cj
mock/: ohos.geo_location_manager.cj
ohos/geo_location_manager/: BUILD.gn  geo_location_manager.cj  geo_location_manager_common.cj  geo_location_manager_ffi.cj
ohos/geo_location_manager/src/: geo_location_manager.cj  geo_location_manager_common.cj
test/APILevel21/geolocationmanager/test/entry/src/main/: module.json5
test/APILevel21/geolocationmanager/test/entry/src/main/cangjie/src/: Test_location.cj
test/APILevel22/geolocationmanager/test/entry/src/main/cangjie/src/: Test_location.cj
test/geolocationmanager/test/entry/src/main/: module.json5
test/geolocationmanager/test/entry/src/main/cangjie/src/: Test_location.cj  test_list_location.cj
